--- a/project-shmup/index-2.0.html
+++ b/project-shmup/index-2.0.html
@@ -20,6 +20,7 @@
       width: 100%;
       height: 100%;
       image-rendering: pixelated;
+      image-rendering: crisp-edges;
       pointer-events: none;
     }
   </style>
