--- a/project-shmup/index-2.0.html
+++ b/project-shmup/index-2.0.html
@@ -6,19 +6,21 @@
   <script type="module" src="./scripts/main-2.0.js"></script>
   <style type="text/css">
     BODY {
-      background: #000;
+      background: #444;
       margin: 0;
       overflow: hidden;
       top: 0px;
       bottom: 0px;
       left: 0px;
       right: 0px;
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-items: center;
       position: absolute;
     }
     CANVAS {
-      width: 100%;
-      height: 100%;
+      margin: auto;
+      background-color: #000;
       image-rendering: pixelated;
       image-rendering: crisp-edges;
       pointer-events: none;
