--- a/project-shmup/index.html
+++ b/project-shmup/index.html
@@ -13,12 +13,13 @@
       bottom: 0px;
       left: 0px;
       right: 0px;
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-items: center;
       position: absolute;
     }
     CANVAS {
-      width: 100%;
-      height: 100%;
+      margin: auto;
       image-rendering: pixelated;
       image-rendering: crisp-edges;
       pointer-events: none;
