time now based on seconds (1ms=0.001s), in game objects - implemented as linked list (easy dynamic z-ordering), small refactoring...

--- a/project-shmup/test.html
+++ b/project-shmup/test.html
@@ -3,9 +3,9 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>canvas test</title>
-  <script src="./scripts/operator.js"></script>
+  <script src="./scripts/list.js"></script>
   <script> 
-    let Test = new Operator();
+    let Test = new List();
 
     function logList(root) {
       let list = [];
@@ -17,21 +17,6 @@
       return list.join(' -> ');
     }
 
-    let bucket = Array(10).fill().map(x=>([]));
-    let cnt = 1;
-    do {
-      let obj = { v: cnt, z: Math.floor(Math.random() * 9.99)};
-      // console.log(`Insert ${cnt}:z${obj.z}`);
-      bucket[obj.z].push(obj);
-      obj.node = Test.spawn(obj);
-      // console.log(' >>> ', logList());
-      // console.log(Test.depthIndices.map(o=>(o?`${o.props.v}:z${o.z}`:'')));
-      // console.log('============================');
-    } while(cnt++ < 12)
-
-    console.log(' >>> ', logList());
-    // console.log(Test.depthIndices.map(o=>(o?`${o.z}:${o.props.v}`:'')));
-
     function nodeCount() {
       let cnt = 0;
       let node = Test.root;
@@ -42,6 +27,42 @@
       return cnt;
     }
 
+    let cnt = 1;
+    let obj;
+    do {
+      obj = { v: cnt, z: Math.floor(Math.random() * 9.99)};
+      // console.log(`Insert ${cnt}:z${obj.z}`);
+      obj.node = Test.spawn(obj);
+      // console.log(' >>> ', logList());
+      // console.log(Test.depthIndices.map(o=>(o?`${o.props.v}:z${o.z}`:'')));
+      // console.log('============================');
+    } while(cnt++ < 12)
+
+    console.log(' >>> ', logList());
+    console.log(Test.depthIndices.map(o=>(o?`${o.props.v}:z${o.z}`:'')));
+
+    console.log('Mutate some');
+    cnt2 = 10;
+    let node, num, dir;
+    while (cnt2--) {
+      num = Math.floor(Math.random() * nodeCount());
+      action = ['replace','addBefore','addAfter','delete'][Math.floor(Math.random() * 3.99)];
+      // action = 'delete';
+      node = Test.root;
+      while (num--) node = node.next;
+      if (action === 'delete') { 
+        console.log(`Mutating list: '${action}' on ${node.props.v}:z${node.z}`);
+      } else {
+        obj = { v: cnt2+cnt, z: node.z};
+        console.log(`Mutating list: '${action}' on ${node.props.v}:z${node.z} with ${obj.v}:z${obj.z}`);
+      }
+      node[action](obj);
+      console.log(' >>> ', logList());
+      console.log(Test.depthIndices.map(o=>(o?`${o.props.v}:z${o.z}`:'')));
+      console.log('============================');
+    }
+
+    /*
     console.log(`Total ${nodeCount()} nodes`);
     console.log(`Let's kill some!`);
     cnt = 12;
@@ -61,37 +82,13 @@
     do {
       let obj = { v: cnt, z: Math.floor(Math.random() * 9.99)};
       console.log(`Insert ${cnt}:z${obj.z}`);
-      bucket[obj.z].push(obj);
       obj.node = Test.spawn(obj);
       console.log(' >>> ', logList());
       console.log(Test.depthIndices.map(o=>(o?`${o.props.v}:z${o.z}`:'')));
       console.log('============================');
     } while(cnt++ < 12)
+    // */
 
-    /*
-    cnt = 4;
-    let num, dir = 1;
-    do {
-      num = Math.floor(Math.random() * 30) + 1;
-      node = Test.root;
-      // ping-pong
-      if (dir == 1 && !node.next) dir = -1;
-      if (dir == -1 && !node.prev) dir = 1;
-      while(num-->0) node = dir == 1 ? node.next : node.prev;
-      console.log(node);
-      console.log(`Removing z${node.z}(${node.props.v})`);
-      // node.delete();
-    } while (cnt--)
-
-    listAfter = [];
-    node = Test.root;
-    do {
-      listAfter.push(`z${node.z}(${node.props.v})`);
-    } while (node = node.next) 
-    console.log(`And that's what we've got: `);
-    console.log(` >>> `, listAfter.join('-'));
-    console.log(Test.depthIndices.map(o=>(o?`${o.z}:${o.props.v}`:'')));
-    */
   </script>
 </head>
 <body></body>
